--- a/public/css/pages/slider.css
+++ b/public/css/pages/slider.css
@@ -20,12 +20,12 @@
     top: 21%!important;
     left: 7%!important;
     background-color: transparent;
-    width: 596px!important;
+    width: 20%!important;
     height: 231px;
     line-height: 250%;
-    color: #806EA8!important;
+    color: #08007C!important;
     text-align: left;
-    font-family: 'Asap';
+    font-family: 'Titillium Web';
 }
 
 .slidertext1{
@@ -33,23 +33,23 @@
     top: 18px;
     left: -1%;
     line-height: 64px;
-    font-family: 'Asap';
+    font-family: 'Titillium Web';
     font-size: 50px;
     font-weight: 600;
     padding: 1%;
 }
 .slidertext2{
-        position: relative;
+    position: relative;
     top: 22px;
     width: 100%;
     padding: 10px;
     padding-left: 0!important;
     padding-bottom: 0!important;
-    font-family: 'Asap';
-    font-size: 25px;
+    font-family: 'Titillium Web';
+    font-size: 50px;
     font-weight: 400;
     padding: 3%;
-    color: #A6A6A6;
+    color: #08007C;
 }
 
 @media only screen and (max-width: 993px){
@@ -63,7 +63,7 @@
     top: 5px;
     left: -1%;
     line-height: 38px;
-    font-family: 'Asap';
+    font-family: 'Titillium Web';
     font-size: 32px;
     font-weight: 600;
     padding: 1%;
@@ -77,9 +77,9 @@
     width: 389px!important;
     height: 231px;
     line-height: 250%;
-    color: #806EA8!important;
+    color: #08007C!important;
     text-align: left;
-    font-family: 'Asap';
+    font-family: 'Titillium Web';
 }
 }
 
@@ -88,11 +88,11 @@
         position: relative;
     top: 8px;
     padding: 10px!important;
-    font-family: 'Lato';
+    font-family: 'Titillium Web';
     font-size: 18px;
     font-weight: 600;
     padding: 3%;
-    color: #909090;
+    color: #08007C;
 }
 
 }
@@ -109,11 +109,14 @@
     
 }
 
-
 .carousel .indicators .indicator-item.active {
-    background-color: #fff;
+    background-color: #EEE!important;
     height: 16px!important;
     width: 16px!important;
+}
+
+.carousel .indicators .indicator-item {
+    background-color: #EEE!important;
 }
 
 .carousel .indicators .indicator-item {
@@ -139,8 +142,8 @@
     width: 84%!important;
     height: 106px;
     line-height: 160%;
-    color: #FF5F8A!important;
+    color: #08007C!important;
     text-align: center;
-    font-family: 'Asap';
+    font-family: 'Titillium Web';
 }
 }
