--- a/public/css/pages/layouts/footer.css
+++ b/public/css/pages/layouts/footer.css
@@ -23,3 +23,10 @@
 .items_datos{
 	color: #F7F7F7;
 }
+
+@media only screen and (max-width: 600px){
+	.page-footer {
+    	height: 100%;
+   	}
+
+}
