--- a/public/css/pages/servicios.css
+++ b/public/css/pages/servicios.css
@@ -51,3 +51,9 @@ input:not([type]), input[type=text]:not(.browser-default), input[type=password]:
 .boton_consultar{
     margin-top: 6%;
 }
+
+@media only screen and (max-width: 600px){
+	.form_container{
+		width: 100%!important;
+	}
+}
